--- a/app/app.html
+++ b/app/app.html
@@ -19,7 +19,7 @@
         Shop Rates
       </button>
       <button menuClose ion-item><ion-icon item-left name="calculator"></ion-icon>Mortgage Calculator</button>
-      <p>Nuevo texto<p>
+      <p>Nuevo texto</p>
       <ion-list-header>Account</ion-list-header>
       <button menuClose ion-item >
         <ion-icon item-left name="person"></ion-icon>
